--- a/Lab-4/Client/build.xml
+++ b/Lab-4/Client/build.xml
@@ -7,7 +7,7 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Lab4Client" default="default" basedir=".">
+<project name="Lab-4" default="default" basedir=".">
     <description>Builds, tests, and runs the project Lab4Client.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
